/*
 * $Id$
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 16:55 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

/*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 Old changelogs are archived in directory
 "oldlogs".
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
*/


2025-04-09 13:30 UTC+0200 Wilfried Brunken DF7BE
* samples/dlgsplit.prg
  ! hbmk2 all.hbp aborts on LINUX:
  ! Removed the include of gtk.ch, not needed any more

2025-04-08 22:20 UTC-0200 Jose Quintas jmcquintas-gmail.com
   - a.prg
   - a.hbp
   + dlgmdi.prg
   * all.prg
   * all.hbp
   * allhbp.hbp
     ! included a.prg as dlgmdi.prg on all.hbp as Windows only
     ! hbmk2 dlgmdi.prg works too

2025-04-08 19:30 UTC-0200 Jose Quintas jmcquintas-gmail.com
   - testspli.prg
   - testspli.hbp
   + dlgsplit.prg
   * all.prg
   * all.hbp
   * allhbp.hbp
     ! include dlgsplit.prg on all.hbp
     ! remembering: hbmk2 dlgsplit.prg works too
     ! Do not change INIT WINDOW, later test on mt
   .github/workflows/checkubuntu.yml
   .github/workflows/checkwindows.yml
     ! changed to compile allhbp.hbp too
     ! need help to create a checkmacos.yml

2025-04-08 18:10 UTC-0200 Jose Quintas jmcquintas-gmail.com
   * allhbp.hbp
     ! include all.hbp and commented individual prgs already on all.hbp

2025-04-08 16:30 UTC-0200 Jose Quintas jmcquintas-gmail.com
   - dlgbrwdbf.hbp
   * dlgbrwdbf.prg
   - datepicker.hbp
   - datepicker.prg
   + dlgdpick.prg
   - tstcombo.hbp
   - tstcombo.prg
   + dlgcombo.prg
   - test_bot.prg
   - test_bot.hbp
   + dlgbot.prg
   - testxml.hbp
   - testxml.prg
   + dlgxml.prg
   + dlgmenu1.prg
     ! These samples can be compiled using hbmk2 name.prg
   + all.prg
   + all.hbp
     ! A menu for all listed samples
     ! hbp uses menu + same standalone source code samples
     ! it is needed to define on prg and hbp about Windows/Linux/MacOs